Fix color contrast ratio

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -117,9 +117,15 @@ figure {
 
 }
 
-.nav > .active {
-	color: #e44207;
+.nav .nav-link {
+	font-size: 1rem;
 }
+
+.nav > .active,
+.nav .nav-link:hover {
+	color: #87451a;
+}
+
 
 /******* main *******/
 
@@ -139,9 +145,9 @@ section {
 }
 
 p {
-	color: #727274;
+	color: #252311;
 	font-family: Poppins;
-	font-size: 1rem;
+	font-size: 1.1rem;
 	font-weight: 400;
 	line-height: 1.8em;
 	letter-spacing: 0em;
@@ -160,8 +166,8 @@ p {
 }
 
 .social-network-heading {
-	color: #525252;
-	font-size: 1rem;
+	color: #000;
+	font-size: 1.2rem;
 	font-weight: 600;
 	line-height: 1.8em;
 	padding-bottom: 1.4em;
@@ -171,7 +177,7 @@ p {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	color: #f9855b;
+	color: #87451a;
 }
 
 .section-heading {
@@ -233,7 +239,7 @@ figure {
 	text-align: center;
 	padding: 0.5em;
 	width: 100%;
-	background: #f9855b;
+	background: #87451a;
 	border: none;
 	color: #fff;
 	line-height: 1.5em;
@@ -255,7 +261,7 @@ figure {
 
 .about-me .resume-link {
 	display: inline-block;
-	background: #f9855b;
+	background: #87451a;
 	width: 65%;
 	padding: 1.1em;
 	color: #fff;
@@ -421,6 +427,10 @@ footer .social-network-nav-link:hover {
 /****** media query ******/
 
 @media only screen and (min-width: 576px) {
+	.nav .nav-link {
+		font-size: 1.3rem;
+	}
+
 	.intro .social-network-nav {
 		justify-content: flex-start;
 	}
